[project]
name = "vdd"
version = "2.0.0"
description = "Tools for Value-Driven Design"
authors = [
    {name = "Alex Corrie", email = "ajccode@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8,<3.13"
dependencies = [
    "platformdirs>=2.6.2",
    "pygsheets>=2.0.5,<3",
    "pandas>=1.3.5",
    "numpy>=1.21.1",
    "xlrd>=2.0,<3",
    "pytz>=2022.6",
    "openpyxl>=3.0.10,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.2,<8",
    "pytest-mock>=3.8.2,<4",
    "coverage>=7",
    "ddt>=1.6.0,<2",
    "pytest-cov>=4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
