[project]
name = "vdd"
version = "2.0.1"
description = "Tools for Value-Driven Design"
authors = [
    {name = "Alex Corrie", email = "ajccode@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "platformdirs>=2.6.2",
    "pygsheets>=2.0.5,<3",
    "pandas>=2.0",
    "numpy>=1.26",
    "xlrd>=2.0,<3",
    "openpyxl>=3.0.10,<4",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-mock>=3.8.2",
    "coverage>=7",
    "ddt>=1.6.0",
    "pytest-cov>=4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
